Add padding to bottom of inbox

--- a/src/style.css
+++ b/src/style.css
@@ -691,6 +691,7 @@ li.bqX.brv {
 	min-width: 512px;
 	margin-right: 7vw;
 	width: auto;
+	padding-bottom: 2rem;
 }
 
 /* Inbox: starred heading space */
